<resources>
    <string name="app_name">YoSigo</string>
    <string name="elejir_opcion">Bienvenid@, \nelija una opción</string>
    <string name="ingresar_empresa">Ingresar como entidad \n prestadora de servicios</string>
    <string name="ingresar_usuario">Ingresar como usuario</string>
    <string name="que_significa">¿Que significa?</string>
    <string name="txtAsService">Significa que te registrarás como alguna empresa o servicio que haga uso</string>
    <string name="txtAsUser">Significa que ingresarás como usuario para hacer uso de los servicios de la empresa</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="fabRegister">fabRegister</string>
    <string name="registrate_como_empresa">Registrate como empresa</string>
    <string name="title_activity_login_as_service">LoginAsServiceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="direcci_n">Dirección</string>

    <!--
    <string-array name="distritos">
        <string name="distrito1">Ancón</string>
        <string name="distrito2">Ate</string>
        <string name="distrito3">Barranco</string>
        <string name="distrito4">Breña</string>
        <string name="distrito5">Carabayllo</string>
        <string name="distrito6">Cercado de Lima</string>
        <string name="distrito7">Chaclacayo</string>
        <string name="distrito8">Chorrillos</string>
        <string name="distrito9">Cieneguilla</string>
        <string name="distrito10">Comas</string>
        <string name="distrito11">El agustino</string>
        <string name="distrito12">Independencia</string>
        <string name="distrito13">Jesús maría</string>
        <string name="distrito14">La molina</string>
        <string name="distrito15">La victoria</string>
        <string name="distrito16">Lince</string>
        <string name="distrito17">Los olivos</string>
        <string name="distrito18">Lurigancho</string>
        <string name="distrito19">Lurín</string>
        <string name="distrito20">Magdalena del mar</string>
        <string name="distrito21">Miraflores</string>
        <string name="distrito22">Pachacámac</string>
        <string name="distrito23">Pucusana</string>
        <string name="distrito24">Pueblo libre</string>
        <string name="distrito25">Puente piedra</string>
        <string name="distrito26">Punta hermosa</string>
        <string name="distrito27">Punta negra</string>
        <string name="distrito28">Rímac</string>
        <string name="distrito29">San bartolo</string>
        <string name="distrito30">San borja</string>
        <string name="distrito31">San isidro</string>
        <string name="distrito32">San Juan de Lurigancho</string>
        <string name="distrito33">San Juan de Miraflores</string>
        <string name="distrito34">San Luis</string>
        <string name="distrito35">San Martin de Porres</string>
        <string name="distrito36">San Miguel</string>
        <string name="distrito37">Santa Anita</string>
        <string name="distrito38">Santa María del Mar</string>
        <string name="distrito39">Santa Rosa</string>
        <string name="distrito40">Santiago de Surco</string>
        <string name="distrito41">Surquillo</string>
        <string name="distrito42">Villa el Salvador</string>
        <string name="distrito43">Villa Maria del Triunfo</string>
    </string-array>
    -->


</resources>