<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/elejir_opcion"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gLineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/btnEnterAsService"
        style="@style/buttonMainActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/ingresar_empresa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineRight"
        app:layout_constraintStart_toStartOf="@id/gLineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txtViewAsService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/que_significa"
        style="@style/textMainActivity"
        app:layout_constraintEnd_toEndOf="@id/btnEnterAsService"
        app:layout_constraintTop_toBottomOf="@id/btnEnterAsService" />

    <Button
        android:id="@+id/btnEnterAsUser"
        style="@style/buttonMainActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/ingresar_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineRight"
        app:layout_constraintStart_toStartOf="@id/gLineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />
    <TextView
        android:id="@+id/txtViewAsUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/que_significa"
        style="@style/textMainActivity"
        app:layout_constraintEnd_toEndOf="@id/btnEnterAsUser"
        app:layout_constraintTop_toBottomOf="@id/btnEnterAsUser" />
</androidx.constraintlayout.widget.ConstraintLayout>